--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>샵링커 가이드</title>
     <link rel="stylesheet" href="/resource/css/reset.css">
     <link rel="stylesheet" href="/resource/css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
 </head>
 <body>
-    <a href="/ec/index.html">EC점장 가이드</a>
+    <h1>네모커머스 가이드</h1>
+    <ul class="guide-list">
+        <li><a href="#" class="disabled">홈페이지 가이드</a></li>
+        <li><a href="#" class="disabled">샵링커 가이드</a></li>
+        <li><a href="#" class="disabled">샵링커S 가이드</a></li>
+        <li><a href="#" class="disabled">샵링커G 가이드</a></li>
+        <li><a href="/ec/module/ui_typo.html">EC점장 가이드</a></li>
+    </ul>
 </body>
 </html>
