--- a/ec/inc_header.html
+++ b/ec/inc_header.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/ec/resource/highlight/styles/atom-one-light.css">
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.min.css" />    
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/style.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/ui-template.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/media.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/manual.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="/ec/resource/js/lib/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="/ec/resource/js/lib/jquery-ui.min.js" type="text/javascript"></script>
     <script src="/ec/resource/highlight/highlight.pack.js"></script>    
     <script src="/ec/resource/js/ui-template.js" type="text/javascript"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -44,6 +46,7 @@
                     <li><a href="/ec/module/ui_component.html" data-page="component">Component</a></li>
                     <li><a href="/ec/module/ui_javascript.html" data-page="javascript">Javascript</a></li>
                     <li><a href="/ec/module/ui_layout.html" data-page="layout">Layout</a></li>
+                    <li><a href="/ec/page/list/account_info.html" target="_blank">Page List</a></li>
                 </ul>
             </div>
         </div>
