--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>샵링커 가이드</title>
-    <link rel="stylesheet" href="/resource/css/reset.css">
-    <link rel="stylesheet" href="/resource/css/style.css">
+    <link rel="stylesheet" href="./resource/css/reset.css">
+    <link rel="stylesheet" href="./resource/css/style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
 </head>
 <body>
@@ -16,7 +16,7 @@
         <li><a href="#" class="disabled">샵링커 가이드</a></li>
         <li><a href="#" class="disabled">샵링커S 가이드</a></li>
         <li><a href="#" class="disabled">샵링커G 가이드</a></li>
-        <li><a href="/ec/module/ui_typo.html">EC점장 가이드</a></li>
+        <li><a href="./ec/module/ui_typo.html">EC점장 가이드</a></li>
     </ul>
 </body>
 </html>
