--- a/ec/module/temp_layout.html
+++ b/ec/module/temp_layout.html
@@ -4,20 +4,20 @@
     <title>EC점장 Layout</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" type="text/css" href="/ec/resource/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="/ec/resource/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/ec/resource/css/ui-template.css" />
-    <link rel="stylesheet" type="text/css" href="/ec/resource/css/media.css" />
+    <link rel="stylesheet" type="text/css" href="./ec/resource/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./ec/resource/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./ec/resource/css/ui-template.css" />
+    <link rel="stylesheet" type="text/css" href="./ec/resource/css/media.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/ec/resource/js/jquery.hotkey.js" type="text/javascript"></script>
-    <script src="/ec/resource/js/ui-template.js" type="text/javascript"></script>
-    <script src="/ec/resource/js/common.js" type="text/javascript"></script>
+    <script src="./ec/resource/js/jquery.hotkey.js" type="text/javascript"></script>
+    <script src="./ec/resource/js/ui-template.js" type="text/javascript"></script>
+    <script src="./ec/resource/js/common.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="ec-wrap">
     <!-- Header -->
     <div class="ec-header">
-        <h1 class="ec-logo"><a href="#"><img src="/ec/resource/images/ec_logo.png" alt="EC店長" /></a></h1>
+        <h1 class="ec-logo"><a href="#"><img src="./ec/resource/images/ec_logo.png" alt="EC店長" /></a></h1>
         <div class="ec-header-box">
             <a href="#" target="_blank" class="ec-service-free">越境ECサービス申込（無料）</a>
             <div class="ec-header-right">
@@ -206,7 +206,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">接続チェック必要</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_01.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_01.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -238,7 +238,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">正常</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_02.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_02.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -270,7 +270,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">有効期間切れ</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_03.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_03.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -302,7 +302,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status update" title="接続チェック必要"><i class="ir">接続チェック必要</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_04.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_04.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -334,7 +334,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">正常</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_05.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_05.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -366,7 +366,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status error" title="有効期間切れ"><i class="ir">有効期間切れ</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_06.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_06.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -398,7 +398,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status error" title="有効期間切れ"><i class="ir">接続チェック必要</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_07.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_07.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -430,7 +430,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">正常</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_08.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_08.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -462,7 +462,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">有効期間切れ</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_09.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_09.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -494,7 +494,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status update" title="接続チェック必要"><i class="ir">接続チェック必要</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_10.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_10.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
@@ -526,7 +526,7 @@
                                 <td><a href="#" class="ui-btn-toggle"><i class="ir">view</i></a></td>
                                 <td><span class="ico-status done" title="接続チェック必要"><i class="ir">正常</i></span></td>
                                 <td><a href="#" class="ui-btn btn-s btn-gray">編集</a></td>
-                                <td><img src="/ec/resource/images/mall/mall_logo_11.png" alt="" /></td>
+                                <td><img src="./ec/resource/images/mall/mall_logo_11.png" alt="" /></td>
                                 <td class="t-left"><a href="#" target="_blank">楽天店長</a></td>
                                 <td>_partner_1934</td>
                                 <td>testpartner1934</td>
