--- a/ec/module/ui_component.html
+++ b/ec/module/ui_component.html
@@ -440,10 +440,10 @@
                                     <h2 class="sub-header">Tabs - Ajax</h2>
                                     <div id="tabs2" class="ui-tab-wrap">
                                       <ul>
-                                        <li><a href="/ec/sample/tab/content1.html">Tab 1</a></li>
-                                        <li><a href="/ec/sample/tab/content2.html">Tab 2</a></li>
-                                        <li><a href="/ec/sample/tab/content3.html">Tab 3</a></li>
-                                        <li><a href="/ec/sample/tab/content4.html">Tab(error)</a></li>
+                                        <li><a href="./ec/sample/tab/content1.html">Tab 1</a></li>
+                                        <li><a href="./ec/sample/tab/content2.html">Tab 2</a></li>
+                                        <li><a href="./ec/sample/tab/content3.html">Tab 3</a></li>
+                                        <li><a href="./ec/sample/tab/content4.html">Tab(error)</a></li>
                                       </ul>
                                         <div class="loader">
                                             <div class="load">
@@ -471,9 +471,9 @@
                                     <pre><code class="html">
                                         &lt;div id="tabs" class="ui-tab-wrap"&gt;
                                             &lt;ul&gt;
-                                                &lt;li&gt;&lt;a href="/ec/sample/tab/content1.html"&gt;tab 01&lt;/a&gt;&lt;/li&gt;
-                                                &lt;li&gt;&lt;a href="/ec/sample/tab/content2.html"&gt;tab 02&lt;/a&gt;&lt;/li&gt;
-                                                &lt;li&gt;&lt;a href="/ec/sample/tab/content3.html"&gt;tab 03&lt;/a&gt;&lt;/li&gt;
+                                                &lt;li&gt;&lt;a href="./ec/sample/tab/content1.html"&gt;tab 01&lt;/a&gt;&lt;/li&gt;
+                                                &lt;li&gt;&lt;a href="./ec/sample/tab/content2.html"&gt;tab 02&lt;/a&gt;&lt;/li&gt;
+                                                &lt;li&gt;&lt;a href="./ec/sample/tab/content3.html"&gt;tab 03&lt;/a&gt;&lt;/li&gt;
                                             &lt;/ul&gt;
                                             &lt;div  class="loader"&gt;Loading Elementss&lt;/div&gt;
                                         &lt;/div&gt;
@@ -826,31 +826,31 @@
                                 <div class="guide-row">
                                     <h2 class="sub-header">쇼핑몰 로고 List</h2>
                                     <p>쇼핑몰 로고 리스트입니다. 사이즈는 100 x 30 입니다.</p>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_01.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_02.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_03.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_04.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_05.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_06.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_07.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_08.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_09.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_10.png" alt="" /></div>
-                                    <div class="col-md-2 col-sm-2"><img src="/ec/resource/images/mall/mall_logo_11.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_01.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_02.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_03.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_04.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_05.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_06.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_07.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_08.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_09.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_10.png" alt="" /></div>
+                                    <div class="col-md-2 col-sm-2"><img src="./ec/resource/images/mall/mall_logo_11.png" alt="" /></div>
                                 </div>
                                 <div class="guide-code">
                                     <pre><code class="html">
-                                        <img src="/ec/resource/images/mall/mall_logo_01.png" alt="楽天" />
-                                        <img src="/ec/resource/images/mall/mall_logo_02.png" alt="Amazon" />
-                                        <img src="/ec/resource/images/mall/mall_logo_03.png" alt="Yahoo!ストア" />
-                                        <img src="/ec/resource/images/mall/mall_logo_04.png" alt="futureshop" />
-                                        <img src="/ec/resource/images/mall/mall_logo_05.png" alt="Qoo10" />
-                                        <img src="/ec/resource/images/mall/mall_logo_06.png" alt="Yahoo!オク" />
-                                        <img src="/ec/resource/images/mall/mall_logo_07.png" alt="ポンパレ" />
-                                        <img src="/ec/resource/images/mall/mall_logo_08.png" alt="SHOPLIST" />
-                                        <img src="/ec/resource/images/mall/mall_logo_09.png" alt="Wowma" />
-                                        <img src="/ec/resource/images/mall/mall_logo_10.png" alt="Cafe24" />
-                                        <img src="/ec/resource/images/mall/mall_logo_11.png" alt="海外販売" />
+                                        <img src="./ec/resource/images/mall/mall_logo_01.png" alt="楽天" />
+                                        <img src="./ec/resource/images/mall/mall_logo_02.png" alt="Amazon" />
+                                        <img src="./ec/resource/images/mall/mall_logo_03.png" alt="Yahoo!ストア" />
+                                        <img src="./ec/resource/images/mall/mall_logo_04.png" alt="futureshop" />
+                                        <img src="./ec/resource/images/mall/mall_logo_05.png" alt="Qoo10" />
+                                        <img src="./ec/resource/images/mall/mall_logo_06.png" alt="Yahoo!オク" />
+                                        <img src="./ec/resource/images/mall/mall_logo_07.png" alt="ポンパレ" />
+                                        <img src="./ec/resource/images/mall/mall_logo_08.png" alt="SHOPLIST" />
+                                        <img src="./ec/resource/images/mall/mall_logo_09.png" alt="Wowma" />
+                                        <img src="./ec/resource/images/mall/mall_logo_10.png" alt="Cafe24" />
+                                        <img src="./ec/resource/images/mall/mall_logo_11.png" alt="海外販売" />
                                     </code></pre>
                                 </div>
                                 <div class="guide-row">
