--- a/ec/module/ui_layout.html
+++ b/ec/module/ui_layout.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="main">
                 <h1 class="page-header" data-page="layout">Layout</h1>
-                <a href="/ec/module/temp_layout.html" class="btn btn-success btn-lg btn-block" target="_blank">View Sample</a>
+                <a href="./ec/module/temp_layout.html" class="btn btn-success btn-lg btn-block" target="_blank">View Sample</a>
                 <div class="guide-box">
                     <div class="guide-row">
                         <h2 class="sub-header">Default Layout</h2>
@@ -45,7 +45,7 @@
                     <div class="guide-row">
                         <h2 class="sub-header">Header</h2>
                         <div class="ec-header">
-                            <h1 class="ec-logo"><a href="#"><img src="/ec/resource/images/ec_logo.png" alt="EC店長" /></a></h1>
+                            <h1 class="ec-logo"><a href="#"><img src="./ec/resource/images/ec_logo.png" alt="EC店長" /></a></h1>
                             <div class="ec-header-box">
                                 <a href="#" target="_blank" class="ec-service-free">越境ECサービス申込（無料）</a>
                                 <div class="ec-header-right">
@@ -59,7 +59,7 @@
                     <div class="guide-code">
                         <pre><code class="html">
                             <div class="ec-header">
-                                <h1 class="ec-logo"><a href="#"><img src="/ec/resource/images/ec_logo.png" alt="EC店長" /></a></h1>
+                                <h1 class="ec-logo"><a href="#"><img src="./ec/resource/images/ec_logo.png" alt="EC店長" /></a></h1>
                                 <div class="ec-header-box">
                                     <a href="#" target="_blank" class="ec-service-free">越境ECサービス申込（無料）</a>
                                     <div class="ec-header-right">
