--- a/ec/index.html
+++ b/ec/index.html
@@ -1,4 +1,4 @@
-<?php require_once 'inc_header.html'; ?>
+<?php require_once './inc_header.html'; ?>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-12 main">
@@ -7,4 +7,4 @@
             </div>
         </div>
     </div>
-<?php require_once 'inc_footer.html'; ?>
+<?php require_once './inc_footer.html'; ?>
