--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="#" class="disabled">샵링커 가이드</a></li>
         <li><a href="#" class="disabled">샵링커S 가이드</a></li>
         <li><a href="#" class="disabled">샵링커G 가이드</a></li>
-        <li><a href="./ec/module/ui_typo.html">EC점장 가이드</a></li>
+        <li><a href="/ec/module/ui_typo.html">EC점장 가이드</a></li>
     </ul>
 </body>
 </html>
