--- a/ec/inc_header.html
+++ b/ec/inc_header.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./ec/resource/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/reset.css" />
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="./ec/resource/highlight/styles/atom-one-light.css">
-    <link rel="stylesheet" type="text/css" href="./ec/resource/css/lib/jquery-ui.min.css" />
-    <link rel="stylesheet" type="text/css" href="./ec/resource/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="./ec/resource/css/ui-template.css" />
-    <link rel="stylesheet" type="text/css" href="./ec/resource/css/media.css" />
-    <link rel="stylesheet" type="text/css" href="./ec/resource/css/manual.css" />
-    <script src="./ec/resource/js/lib/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script src="./ec/resource/js/lib/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="./ec/resource/highlight/highlight.pack.js"></script>
-    <script src="./ec/resource/js/ui-template.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/ec/resource/highlight/styles/atom-one-light.css">
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/ui-template.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/media.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/manual.css" />
+    <script src="/ec/resource/js/lib/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="/ec/resource/js/lib/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/ec/resource/highlight/highlight.pack.js"></script>
+    <script src="/ec/resource/js/ui-template.js" type="text/javascript"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -35,18 +35,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./ec/index.html"><span class="sr-only">EC점장 가이드</span></a>
+                <a class="navbar-brand" href="/ec/index.html"><span class="sr-only">EC점장 가이드</span></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./ec/module/ui_typo.html" data-page="typo">Typo</a></li>
-                    <li><a href="./ec/module/ui_table.html" data-page="table">Table</a></li>
-                    <li><a href="./ec/module/ui_form.html" data-page="forms">Forms</a></li>
-                    <li><a href="./ec/module/ui_buttons.html" data-page="buttons">Buttons</a></li>
-                    <li><a href="./ec/module/ui_component.html" data-page="component">Component</a></li>
-                    <li><a href="./ec/module/ui_javascript.html" data-page="javascript">Javascript</a></li>
-                    <li><a href="./ec/module/ui_layout.html" data-page="layout">Layout</a></li>
-                    <li><a href="./ec/page/list/account_info.html" target="_blank">Page List</a></li>
+                    <li><a href="/ec/module/ui_typo.html" data-page="typo">Typo</a></li>
+                    <li><a href="/ec/module/ui_table.html" data-page="table">Table</a></li>
+                    <li><a href="/ec/module/ui_form.html" data-page="forms">Forms</a></li>
+                    <li><a href="/ec/module/ui_buttons.html" data-page="buttons">Buttons</a></li>
+                    <li><a href="/ec/module/ui_component.html" data-page="component">Component</a></li>
+                    <li><a href="/ec/module/ui_javascript.html" data-page="javascript">Javascript</a></li>
+                    <li><a href="/ec/module/ui_layout.html" data-page="layout">Layout</a></li>
+                    <li><a href="/ec/page/list/account_info.html" target="_blank">Page List</a></li>
                 </ul>
             </div>
         </div>
