--- a/ec/inc_header.html
+++ b/ec/inc_header.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/ec/resource/highlight/styles/atom-one-light.css">
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/ec/resource/css/lib/jquery-ui.edit.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/ui-template.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/media.css" />
     <link rel="stylesheet" type="text/css" href="/ec/resource/css/manual.css" />
